table_3/results/Jib_post_nullaway_ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/jib-ann-post/src/src/main/java/com/google/cloud/tools/jib/image/json/JsonToImageTranslator.java:90: error: [NullAway] enhanced-for expression containerConfigurationTemplate.getContainerEnvironment() is @Nullable
    for (String environmentVariable : containerConfigurationTemplate.getContainerEnvironment()) {
                                                                                            ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/jib-ann-post/src/src/main/java/com/google/cloud/tools/jib/image/LayerBuilder.java:71: error: [NullAway] dereferenced expression sourceFile.getParent() is @Nullable
                    Path sourceFileRelativePath = sourceFile.getParent().relativize(path);
                                                                        ^
    (see http://t.uber.com/nullaway )
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 782ms
2
